fix(ui): wrap items when too many items

--- a/src/assets/styles/components/Menu.css
+++ b/src/assets/styles/components/Menu.css
@@ -13,6 +13,8 @@
   padding-left: 0;
   margin: 45px 0 20px;
   display: flex;
+  flex-wrap: wrap;
+  gap: 4px;
   justify-content: center;
   align-items: center;
   list-style: none;
@@ -23,6 +25,7 @@
   border-radius: 25px;
   font-size: 1rem;
   text-transform: capitalize;
+  text-align: center;
   cursor: pointer;
 }
 
